Fix slides alignment

--- a/frontend/nft-master/src/components/layout/footer/socials/Socials.module.scss
+++ b/frontend/nft-master/src/components/layout/footer/socials/Socials.module.scss
@@ -2,6 +2,7 @@
 
 .socials {
   display: flex;
+  justify-content: flex-end;
 
   svg {
     @include svgColor(#000);
